# flashlight

./: .gitignore  LICENSE  Makefile  README.md  _test_block_reduction.py  _test_reduction_fusion.py  bmm_fusion_demo.py  pyproject.toml  test_blockptr_bmm_template.py  test_bmm_as_reduction.py  test_dependent_reduction_fusion.py  test_fused_bmm_template.py
apptainer/: Makefile  README.md  flashlight.def  run_artifact_eval.sh  run_benchmarks.sh
attention_variants/: __init__.py  alibi.py  causal.py  diff_attn.py  document_mask.py  evoformer.py  prefix_lm.py  sliding_window.py  softcap.py  vanilla.py
attention_variants/flashinfer/: __init__.py  alibi.py  causal.py  document_mask.py  (+5 more)
benchmarks/: Makefile  README.md  _utils.py  attention.py  benchmark_openfold.py  benchmark_openfold_fl.py  diff_attn.py  evo_attn.py  plot.py  plot_custom_variants.py  plot_fig2_fig3.py  plot_fig4.py  plot_flex_able.py  plot_flex_unable.py  plot_flex_variants.py  plot_vllm_e2e.py  run_diff_attn.py  run_evoformer.py  run_fig2_fig3_flex_variants.py  run_fig4a_diff_attn.py  run_fig4b_evoformer.py  run_flex_variants.py  variants.py  vllm_e2e_infer.py
monkeypatch/: __init__.py  _fusion_common.py  _monkey.py  bmm_as_reduction.py  bmm_block_ptr_template.py  dependent_reduction_fusion.py  fuse_bmm.py  fused_bmm_template.py
scripts/: run_benchmarks_local.sh  run_mlsys26_ae_local.sh
tests/: __init__.py  test_alibi.py  test_causal.py  test_diffattn.py  test_document_mask.py  test_evoattn.py  test_gqa.py  test_ipa.py  test_prefix_lm.py  test_sliding_window.py  test_softcap.py  test_vanilla.py
(+85 files in other folders)
